Update: Add strong and em classes to the strong and em markup.

--- a/documentation.html
+++ b/documentation.html
@@ -185,7 +185,7 @@
               </p>
               <p class="p">
                 There are two major groups of specifications, the <a href="fll/specifications.html#fss" class="link">Featureless Settings Specifications</a> and the <a href="fll/specifications.html#iki" class="link">IKI Specifications</a>.
-                Individual program projects may also have their own specifications. Each pogram has a specifications page that describes the specifications, if any, that are defined by that project. The <strong>Featureless Make</strong> is <a href="documentation/fake/specifications.html" class="link">a good example of program specific specifications</a>.
+                Individual program projects may also have their own specifications. Each pogram has a specifications page that describes the specifications, if any, that are defined by that project. The <strong class="strong">Featureless Make</strong> is <a href="documentation/fake/specifications.html" class="link">a good example of program specific specifications</a>.
               </p>
               <p class="p">
                 Many of these specifications may also be found in the source code repositories:
@@ -225,7 +225,7 @@
 
             <div class="article-content">
               <p class="p">
-                One of the biggest problems with an <abbr title="Application Programming Interface">API</abbr> is the mis-use or misunderstanding of the meaning and purpose of one. The term itself is not the most accurate and is also not ideal. A more appropriate term would be a <strong>Library Interface</strong> or a <strong>Software Interface</strong>.
+                One of the biggest problems with an <abbr title="Application Programming Interface">API</abbr> is the mis-use or misunderstanding of the meaning and purpose of one. The term itself is not the most accurate and is also not ideal. A more appropriate term would be a <strong class="strong">Library Interface</strong> or a <strong class="strong">Software Interface</strong>.
               </p>
 
               <section class="section">
