--- a/documentation/control/specifications.html
+++ b/documentation/control/specifications.html
@@ -96,13 +96,13 @@
               The <abbr title="Featureless Linux Library">FLL</abbr> project provides several <a href="fll/specifications.html" class="link">specifications</a>.
             </p>
             <p class="p">
-              The <strong>Control</strong> follows the following specifications:
+              The <strong class="strong">Control</strong> follows the following specifications:
             </p>
             <ul>
               <li><a href="fll/specifications/fss/fss-000f.html" class="link">FSS-000F (Simple Packet)</a></li>
             </ul>
             <p class="p">
-              The <strong>Control</strong> defines the following specifications:
+              The <strong class="strong">Control</strong> defines the following specifications:
             </p>
             <ul>
               <li><a href="documentation/control/specifications/settings.html" class="link">Settings</a></li>
