--- a/documentation/control/specifications/settings.html
+++ b/documentation/control/specifications/settings.html
@@ -93,11 +93,11 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>Control</strong> defines the <em>Settings Specification</em>.
-              This specification describes how the settings file is used by the <strong>Control</strong> program.
+              The <strong class="strong">Control</strong> defines the <em class="em">Settings Specification</em>.
+              This specification describes how the settings file is used by the <strong class="strong">Control</strong> program.
             </p>
             <p class="p">
-              The control settings "<em>settings</em>" file follows the <code class="code">FSS-0001 (Extended)</code> format.
+              The control settings "<em class="em">settings</em>" file follows the <code class="code">FSS-0001 (Extended)</code> format.
             </p>
             <p class="p">
               Each Object represents a settings property name.
@@ -127,7 +127,7 @@
               <p class="p">
                 The settings file provides default or system-wide settings.
                 The system-wide settings file is loaded by default but a custom settings file may be alternatively specified.
-                Using this avoids the need to add additional paramters to the command line when calling the <strong>Control</strong> program.
+                Using this avoids the need to add additional paramters to the command line when calling the <strong class="strong">Control</strong> program.
               </p>
               <p class="p">
                 When this file is not specified any hardcoded defaults compiled into the program are used.
@@ -176,7 +176,7 @@
                     A full socket path might look something like <code class="code">/var/run/controller/controller-default.socket</code>.
                   </p>
                   <p class="p">
-                    It is common for the <strong>Controller</strong> program to be compiled as an init program.
+                    It is common for the <strong class="strong">Controller</strong> program to be compiled as an init program.
                     In this case it may be common for the full socket path to instead be something more like <code class="code">/var/run/init/init-default.socket</code>.
                   </p>
                 </li>
