--- a/documentation/controller/specifications.html
+++ b/documentation/controller/specifications.html
@@ -108,14 +108,14 @@
               The <abbr title="Featureless Linux Library">FLL</abbr> project provides several <a href="fll/specifications.html" class="link">specifications</a>.
             </p>
             <p class="p">
-              The <strong>Controller</strong> follows the following specifications:
+              The <strong class="strong">Controller</strong> follows the following specifications:
             </p>
             <ul>
               <li><a href="fll/specifications/fss/fss-0005.html" class="link">FSS-0005 (Somewhat Basic List)</a></li>
               <li><a href="fll/specifications/fss/fss-000f.html" class="link">FSS-000F (Simple Packet)</a></li>
             </ul>
             <p class="p">
-              The <strong>Controller</strong> defines the following specifications:
+              The <strong class="strong">Controller</strong> defines the following specifications:
             </p>
             <ul>
               <li><a href="documentation/controller/specifications/action.html" class="link">Action</a></li>
