--- a/documentation/fake/specifications.html
+++ b/documentation/fake/specifications.html
@@ -102,7 +102,7 @@
               The <abbr title="Featureless Linux Library">FLL</abbr> project provides several <a href="fll/specifications.html" class="link">specifications</a>.
             </p>
             <p class="p">
-              The <strong>Featureless Make</strong> follows the following specifications:
+              The <strong class="strong">Featureless Make</strong> follows the following specifications:
             </p>
             <ul>
               <li><a href="fll/specifications/fss/fss-0000.html" class="link">FSS-0000 (Basic)</a></li>
@@ -111,7 +111,7 @@
               <li><a href="fll/specifications/iki/iki-0002.html" class="link">IKI-0002 (Simple Script)</a></li>
             </ul>
             <p class="p">
-              The <strong>Featureless Make</strong> defines the following specifications:
+              The <strong class="strong">Featureless Make</strong> defines the following specifications:
             </p>
             <ul>
               <li><a href="documentation/fake/specifications/defines.html" class="link">Defines</a></li>
