--- a/documentation/fake/specifications/defines.html
+++ b/documentation/fake/specifications/defines.html
@@ -99,7 +99,7 @@
 
           <div class="main-content">
             <p class="p">
-              The build settings <strong>defines</strong> file follows the <code class="code">FSS-0000 (Basic)</code> format.
+              The build settings <strong class="strong">defines</strong> file follows the <code class="code">FSS-0000 (Basic)</code> format.
             </p>
             <p class="p">
               Each Object represents a specific a macro name to be defined during compilation.
