--- a/documentation/fake/specifications/dependencies.html
+++ b/documentation/fake/specifications/dependencies.html
@@ -99,7 +99,7 @@
 
           <div class="main-content">
             <p class="p">
-              The build settings <strong>dependencies</strong> file follows the <code class="code">FSS-0001 (Extended)</code> format.
+              The build settings <strong class="strong">dependencies</strong> file follows the <code class="code">FSS-0001 (Extended)</code> format.
             </p>
             <p class="p">
               Each Object represents a specific project name as it would be linked against.
