--- a/documentation/fake/specifications/fakefile.html
+++ b/documentation/fake/specifications/fakefile.html
@@ -99,10 +99,10 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>fakefile</strong> file follows the <code class="code">FSS-0005 (Somewhat Basic List)</code> format with a sub-format of <code class="code">IKI-0002 (Simple Script)</code>.
+              The <strong class="strong">fakefile</strong> file follows the <code class="code">FSS-0005 (Somewhat Basic List)</code> format with a sub-format of <code class="code">IKI-0002 (Simple Script)</code>.
             </p>
             <p class="p">
-              A <strong>fakefile</strong> is broken up into multiple Basic Lists, referred to as Sections, with two special purpose reserved Sections.
+              A <strong class="strong">fakefile</strong> is broken up into multiple Basic Lists, referred to as Sections, with two special purpose reserved Sections.
             </p>
             <p class="p">
               The Sections are broken up into multiple Extended Objects and their respective Contents, referred to as Section Operations.
@@ -279,7 +279,7 @@
 
             <div class="section-content">
               <p class="p">
-                This describes intent and purposes of the <strong>fakefile</strong> file settings.
+                This describes intent and purposes of the <strong class="strong">fakefile</strong> file settings.
               </p>
               <p class="p">
                 All files specified are relative to the project root.
@@ -291,7 +291,7 @@
                 <li>
                   <div><code class="code">settings</code>:</div>
                   <p class="p">
-                    Any configuration specific to this <strong>fakefile</strong> is stored here.
+                    Any configuration specific to this <strong class="strong">fakefile</strong> is stored here.
                   </p>
                   <p class="p">
                     This includes the declaration of define and parameter IKI variable substitution values.
@@ -439,7 +439,7 @@
                 <li>
                   <div><code class="code">main</code>:</div>
                   <p class="p">
-                    This is the main entry point when processing the <strong>fakefile</strong>.
+                    This is the main entry point when processing the <strong class="strong">fakefile</strong>.
                   </p>
                   <p class="p">
                     This is processed top-down until the end of the list is reached.
@@ -1071,7 +1071,7 @@ else
                     <li>
                       <div><code class="code">parameter</code>:</div>
                       <p class="p">
-                        This represents a variable defined within the scope of the <strong>fakefile</strong>.
+                        This represents a variable defined within the scope of the <strong class="strong">fakefile</strong>.
                       </p>
                       <p class="p">
                         This is not exported as an environment variable and is therefore not visible to any executed programs or scripts.
