--- a/documentation/fake/specifications/settings.html
+++ b/documentation/fake/specifications/settings.html
@@ -99,7 +99,7 @@
 
           <div class="main-content">
             <p class="p">
-              The build settings <strong>settings</strong> file follows the <code class="code">FSS-0001 (Extended)</code> format.
+              The build settings <strong class="strong">settings</strong> file follows the <code class="code">FSS-0001 (Extended)</code> format.
             </p>
             <p class="p">
               Each Object represents a settings property name.
@@ -218,10 +218,10 @@
 
             <div class="section-content">
               <p class="p">
-                This describes intent and purposes of the build <strong>settings</strong> file settings.
+                This describes intent and purposes of the build <strong class="strong">settings</strong> file settings.
               </p>
               <p class="p">
-                The <strong>settings</strong> file is designed for very simple compilations that represent a single named program and/or a single named library.
+                The <strong class="strong">settings</strong> file is designed for very simple compilations that represent a single named program and/or a single named library.
               </p>
               <p class="p">
                 For specific details on the allowed formatting, see the settings.txt under the specifications folder.
@@ -239,7 +239,7 @@
                     The programs <code class="code">gcc</code> and <code class="code">clang</code> are known to work.
                   </p>
                   <p class="p">
-                    Many of the parameters in the <strong>settings</strong> file can be changed if using a non-GCC, but there may be certain hard-coded functionality that may need to be changed.
+                    Many of the parameters in the <strong class="strong">settings</strong> file can be changed if using a non-GCC, but there may be certain hard-coded functionality that may need to be changed.
                   </p>
                 </li>
                 <li>
