--- a/fll.html
+++ b/fll.html
@@ -110,16 +110,16 @@
 
             <div class="article-content">
               <p class="p">
-                The current stable release series of <abbr title="Featureless Linux Library">FLL</abbr> is <strong>0.6</strong>. The latest version of the stable release series is <strong>0.6.1</strong>.
+                The current stable release series of <abbr title="Featureless Linux Library">FLL</abbr> is <strong class="strong">0.6</strong>. The latest version of the stable release series is <strong class="strong">0.6.1</strong>.
               </p>
               <p class="p">
-                There are two different ways in which the project is released. The <em>bare release</em> and the <em>pre-packaged release</em>.
+                There are two different ways in which the project is released. The <em class="em">bare release</em> and the <em class="em">pre-packaged release</em>.
               </p>
               <p class="p">
-                 A <em>bare release</em> is the original project structure exactly as it appears in the Git source code repositories. The project is designed and intended to be hacked. As a result, the project must be converted into a package. There are different default supported package structures like <em>monolithic</em>, <em>level</em>, and <em>individual</em>.
+                 A <em class="em">bare release</em> is the original project structure exactly as it appears in the Git source code repositories. The project is designed and intended to be hacked. As a result, the project must be converted into a package. There are different default supported package structures like <em class="em">monolithic</em>, <em class="em">level</em>, and <em class="em">individual</em>.
               </p>
               <p class="p">
-                 A <em>pre-packaged release</em> is the project packaged into a <em>monolithic</em> structure. The programs are also pre-packaged to expect to link against a <em>monolithic</em> <abbr title="Featureless Linux Library">FLL</abbr> package.
+                 A <em class="em">pre-packaged release</em> is the project packaged into a <em class="em">monolithic</em> structure. The programs are also pre-packaged to expect to link against a <em class="em">monolithic</em> <abbr title="Featureless Linux Library">FLL</abbr> package.
               </p>
               <div class="center">
                 <table class="table fll-release">
@@ -256,7 +256,7 @@
                 </table>
               </div>
               <p class="p">
-                There are also <strong>stand alone</strong> sources and related files for some of the programs:
+                There are also <strong class="strong">stand alone</strong> sources and related files for some of the programs:
               </p>
               <div class="center">
                 <table class="table fll-release">
@@ -286,16 +286,16 @@
                 The pre-packaged releases may also be found on the following external websites:
               </p>
               <ul>
-                <li><strong>Sourceforge, Monolithic</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/monolithic/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/monolithic/</a></li>
-                <li><strong>Sourceforge, Programs</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/programs/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/programs/</a></li>
-                <li><strong>Sourceforge, Stand Alone</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/stand_alone/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/stand_alone/</a></li>
+                <li><strong class="strong">Sourceforge, Monolithic</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/monolithic/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/monolithic/</a></li>
+                <li><strong class="strong">Sourceforge, Programs</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/programs/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/programs/</a></li>
+                <li><strong class="strong">Sourceforge, Stand Alone</strong>: <a href="https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/stand_alone/" class="link external">https://sourceforge.net/projects/fll/files/FLL-0.6/0.6.1/stand_alone/</a></li>
               </ul>
               <p class="p">
                 The bare releases may be found on the following websites:
               </p>
               <ul>
-                <li><strong>Github</strong>: <a href="https://github.com/thekevinday/fll/releases/tag/0.6.1" class="link external">https://github.com/thekevinday/fll/releases/tag/0.6.1</a></li>
-                <li><strong>Gitlab</strong>: <a href="https://gitlab.com/kevuxer/fll/-/releases/0.6.1" class="link external">https://gitlab.com/kevuxer/fll/-/releases/0.6.1</a></li>
+                <li><strong class="strong">Github</strong>: <a href="https://github.com/thekevinday/fll/releases/tag/0.6.1" class="link external">https://github.com/thekevinday/fll/releases/tag/0.6.1</a></li>
+                <li><strong class="strong">Gitlab</strong>: <a href="https://gitlab.com/kevuxer/fll/-/releases/0.6.1" class="link external">https://gitlab.com/kevuxer/fll/-/releases/0.6.1</a></li>
               </ul>
             </div>
           </article>
