--- a/fll/specifications/iki/iki-0000.html
+++ b/fll/specifications/iki/iki-0000.html
@@ -100,8 +100,8 @@
               <p>
                 The IKI syntax provides a vocabulary name (with specific context associated with it) followed by quoted code that is associated with the given vocabulary name.
                 The vocabulary represents a list of allowed variable names that may also have specific contextual meaning defined by a given IKI specification.
-                The variable name is considered the <em>Object</em>.
-                The variable value is considered the <em>Content</em>.
+                The variable name is considered the <em class="em">Object</em>.
+                The variable value is considered the <em class="em">Content</em>.
               </p>
               <p>
                 The IKI format will use <code class="code">iki-0000</code> to represent an IKI with no explicitly defined vocabulary.
