--- a/fll/specifications/iki/iki-0002.html
+++ b/fll/specifications/iki/iki-0002.html
@@ -91,7 +91,7 @@
                 Flexibility on interpretation is intended so that the context can be more fine-tuned and customized.
               </p>
               <p>
-                The taxonomy for the <em>context</em>, <em>define</em>, and <em>parameter</em> are intentionally not defined here and left open.
+                The taxonomy for the <em class="em">context</em>, <em class="em">define</em>, and <em class="em">parameter</em> are intentionally not defined here and left open.
                 One utilizing this should document the taxonomy for each of these as desired.
               </p>
               <p>
@@ -126,8 +126,8 @@
               <p>
                 The IKI syntax provides a vocabulary name (with specific context associated with it) followed by quoted code that is associated with the given vocabulary name.
                 The vocabulary represents a list of allowed variable names that may also have specific contextual meaning defined by a given IKI specification.
-                The variable name is considered the <em>Object</em>.
-                The variable value is considered the <em>Content</em>.
+                The variable name is considered the <em class="em">Object</em>.
+                The variable value is considered the <em class="em">Content</em>.
               </p>
               <p>
                 The IKI format will use <code class="code">iki-0000</code> to represent an IKI with no explicitly defined vocabulary.
