--- a/projects.html
+++ b/projects.html
@@ -456,7 +456,7 @@
               </p>
               <p class="p">
                 This program specifically handles only the core status codes provided by the <abbr title="Featureless Linux Library">FLL</abbr>.<br>
-                Other programs that utilize custom status codes should provide their own implementation of this program, such as is done with the <strong>FSS Status Code</strong> program.
+                Other programs that utilize custom status codes should provide their own implementation of this program, such as is done with the <strong class="strong">FSS Status Code</strong> program.
               </p>
             </div>
           </article>
