--- a/sources.html
+++ b/sources.html
@@ -84,7 +84,7 @@
             </header>
             <div class="article-content">
               <p class="p">
-                The source code for the <strong>Featureless Linux Library</strong> is released in several locations.
+                The source code for the <strong class="strong">Featureless Linux Library</strong> is released in several locations.
                 The <a href="fll.html" class="link">Featureless Linux Library</a> page contains the full range of links regarding the source code.
               </p>
               <p class="p">
@@ -105,7 +105,7 @@
 
             <div class="article-content">
               <p class="p">
-                The source code for the <strong>Turtle Kevux Distribution</strong> is provided in the DVD-ROM for each individual release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
+                The source code for the <strong class="strong">Turtle Kevux Distribution</strong> is provided in the DVD-ROM for each individual release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
               </p>
               <p class="p">
                 The following represents the most recently available release:
@@ -124,7 +124,7 @@
 
             <div class="article-content">
               <p class="p">
-                The source code for the <strong>Turtle Kevux Installation Scripts</strong> is provided both as separate downloads and in the DVD-ROM for each individual Turtle Kevux release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
+                The source code for the <strong class="strong">Turtle Kevux Installation Scripts</strong> is provided both as separate downloads and in the DVD-ROM for each individual Turtle Kevux release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
               </p>
               <p class="p">
                 The following represents the most recently available release:
@@ -144,7 +144,7 @@
 
             <div class="article-content">
               <p class="p">
-                The <strong>Kevux Website</strong> source code is also available for download. This website is designed to function even when downloaded, extracted, and viewed locally (without a web server hosting it). The downloaded version of this website will not contain the non-website related files nor will it contain the download website file itself. Such links will be broken on the downloaded website source. Check out the <a href="licenses.html" class="link">licenses</a> page for the license of the source code of this website.
+                The <strong class="strong">Kevux Website</strong> source code is also available for download. This website is designed to function even when downloaded, extracted, and viewed locally (without a web server hosting it). The downloaded version of this website will not contain the non-website related files nor will it contain the download website file itself. Such links will be broken on the downloaded website source. Check out the <a href="licenses.html" class="link">licenses</a> page for the license of the source code of this website.
               </p>
               <p class="p">
                 The following is the link:
