--- a/specification.html
+++ b/specification.html
@@ -233,7 +233,7 @@
 
             <div class="article-content">
               <p class="p">
-                One of the biggest problems with an <abbr title="Application Programming Interface">API</abbr> is the mis-use or misunderstanding of the meaning and purpose of one. The term itself is not the most accurate and is also not ideal. A more appropriate term would be a <strong>Library Interface</strong> or a <strong>Software Interface</strong>.
+                One of the biggest problems with an <abbr title="Application Programming Interface">API</abbr> is the mis-use or misunderstanding of the meaning and purpose of one. The term itself is not the most accurate and is also not ideal. A more appropriate term would be a <strong class="strong">Library Interface</strong> or a <strong class="strong">Software Interface</strong>.
               </p>
 
               <section class="section">
