--- a/webbing.html
+++ b/webbing.html
@@ -85,7 +85,7 @@
             <p class="p">
               The old internet at one point had many websites linking to other websites.
               This linking process is a pre-search engine error idea.
-              This <em>webbing</em> page brings back the old concept of finding websites without a search engine.
+              This <em class="em">webbing</em> page brings back the old concept of finding websites without a search engine.
             </p>
             <p class="p">
               The purpose of this page is to provide links to external websites that are not directly related to this website.
@@ -93,7 +93,7 @@
               This page page will be slowly populated over time.
             </p>
             <p class="p">
-              These websites do not represent the <em>Kevux</em> website and neither does the <em>Kevux</em> website represent these sites.
+              These websites do not represent the <em class="em">Kevux</em> website and neither does the <em class="em">Kevux</em> website represent these sites.
               At no point should you consider or assume that these websites or their authors share common beliefs.
               The links to these websites could, at any point in time, become unavailable.
             </p>
@@ -106,14 +106,14 @@
 
             <div class="article-content">
               <p class="p">
-                <strong><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://kernel.org/" class="link external">https://kernel.org/</a>.
+                <strong class="strong"><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://kernel.org/" class="link external">https://kernel.org/</a>.
               </p>
               <p class="p">
-                <strong>Linux</strong> is an Operating System.
+                <strong class="strong">Linux</strong> is an Operating System.
                 This Operating System should not need any introduction here.
               </p>
               <p class="p">
-                <em>Kevux</em> runs off of and utilizes <strong>Linux</strong>.
+                <em class="em">Kevux</em> runs off of and utilizes <strong class="strong">Linux</strong>.
               </p>
             </div>
           </article>
@@ -125,14 +125,14 @@
 
             <div class="article-content">
               <p class="p">
-                <strong><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://linuxfromscratch.org/" class="link external">https://linuxfromscratch.org/</a>.
+                <strong class="strong"><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://linuxfromscratch.org/" class="link external">https://linuxfromscratch.org/</a>.
               </p>
               <p class="p">
                 Provides a set of instructions to, from the ground up, learn how to build and install a basic Linux distribution using only the source code.
               </p>
               <p class="p">
-                <strong>Linux From Scratch</strong> is Kevin Day's first experience with diving deep into Linux.
-                This is want ultimately inspired the <em>Kevux Operating Systems</em> design.
+                <strong class="strong">Linux From Scratch</strong> is Kevin Day's first experience with diving deep into Linux.
+                This is want ultimately inspired the <em class="em">Kevux Operating Systems</em> design.
               </p>
             </div>
           </article>
@@ -144,15 +144,15 @@
 
             <div class="article-content">
               <p class="p">
-                <strong><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://suckless.org/" class="link external">https://suckless.org/</a>.
+                <strong class="strong"><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://suckless.org/" class="link external">https://suckless.org/</a>.
               </p>
               <p class="p">
                 Provides a collection of projects designed around the idea of simplicity, clarity, and frugality in software.
               </p>
               <p class="p">
-                The ideas behind <strong>Software that Sucks Less</strong> are very similar to the <em>Kevux Software</em>, such as the <em>Featureless Linux Library</em>.
+                The ideas behind <strong class="strong">Software that Sucks Less</strong> are very similar to the <em class="em">Kevux Software</em>, such as the <em class="em">Featureless Linux Library</em>.
                 There are slight, but significant differences.
-                Expect the <em>Kevux Software</em> to be slightly more complex.
+                Expect the <em class="em">Kevux Software</em> to be slightly more complex.
               </p>
             </div>
           </article>
@@ -164,14 +164,14 @@
 
             <div class="article-content">
               <p class="p">
-                <strong><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://musl.libc.org/" class="link external">https://musl.libc.org/</a>.
+                <strong class="strong"><abbr title="Uniform Resource Locator">URL</abbr></strong>: <a href="https://musl.libc.org/" class="link external">https://musl.libc.org/</a>.
               </p>
               <p class="p">
-                Provides an implementation of the standard <em>libc</em>.
-                This is considered, by Kevin Day, to be one of the better designed <em>libc</em> implementations out there.
+                Provides an implementation of the standard <em class="em">libc</em>.
+                This is considered, by Kevin Day, to be one of the better designed <em class="em">libc</em> implementations out there.
               </p>
               <p class="p">
-                Consider using this <strong>Musl Libc</strong> over the more popular <em>GNU C Library</em> found at <a href="https://www.gnu.org/software/libc/" class="link external">https://www.gnu.org/software/libc/</a>.
+                Consider using this <strong class="strong">Musl Libc</strong> over the more popular <em class="em">GNU C Library</em> found at <a href="https://www.gnu.org/software/libc/" class="link external">https://www.gnu.org/software/libc/</a>.
               </p>
             </div>
           </article>
