--- a/documentation/control.html
+++ b/documentation/control.html
@@ -93,10 +93,10 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>control</strong> program is a tool for sending commands to the <strong>controller</strong> program.
+              The <strong class="strong">control</strong> program is a tool for sending commands to the <strong class="strong">controller</strong> program.
             </p>
             <p class="p">
-              This tools is currently incomplete and is not guaranteed to work with the <strong>controller</strong> program. Further development will be made on this once the <strong>controller</strong> program is updated. The next development series is planned to focus on networking, which will include support for this.
+              This tools is currently incomplete and is not guaranteed to work with the <strong class="strong">controller</strong> program. Further development will be made on this once the <strong class="strong">controller</strong> program is updated. The next development series is planned to focus on networking, which will include support for this.
             </p>
           </div>
 
@@ -171,7 +171,7 @@
                 </table>
               </div>
               <p class="p">
-                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong class="strong">utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p class="p">
                 The <code class="code">+N/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
