--- a/documentation/control/specifications/packet_response.html
+++ b/documentation/control/specifications/packet_response.html
@@ -93,9 +93,9 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>Control</strong> follows a <em>Packet Response Specification</em>.
+              The <strong class="strong">Control</strong> follows a <em class="em">Packet Response Specification</em>.
               This specification is incomplete at this time as the functionality is not yet written.
-              This specification is intended to be shared with the <strong>Controller</strong> program.
+              This specification is intended to be shared with the <strong class="strong">Controller</strong> program.
             </p>
           </div>
 
@@ -106,26 +106,26 @@
 
             <div class="section-content">
               <p class="p">
-                The <strong>Control</strong> program sends packets and receives packet responses from the <strong>Controller</strong> program over the <strong>Controller</strong> program's control socket.
+                The <strong class="strong">Control</strong> program sends packets and receives packet responses from the <strong class="strong">Controller</strong> program over the <strong class="strong">Controller</strong> program's control socket.
                 This documentation describes the expected response packets and how these response packets are handled.
               </p>
               <p class="p">
-                The communications to/from the <strong>Controller</strong> program utilize the <code class="code">FSS-000F (Simple Packet)</code>.
+                The communications to/from the <strong class="strong">Controller</strong> program utilize the <code class="code">FSS-000F (Simple Packet)</code>.
                 This Simple Packet is expected to contain within it the <code class="code">FSS-000E (Payload)</code> format.
               </p>
               <p class="p">
                 The Payload contains within it a Header and a Payload.
                 Note the potential confusion here between the Payload when referring to the Packet format and the Payload referring to the Content within the Payload Packet.
-                The "<em>Payload Header</em>" refers to either the Object (<code class="code">header:</code>) or Content within the Payload Packet representing the header.
-                The "<em>Payload Object</em>" refers to the Object within the Payload Packet (ie: <code class="code">payload:</code>).
-                The "<em>Payload Content</em>" refers to the Content within the Payload Packet.
+                The "<em class="em">Payload Header</em>" refers to either the Object (<code class="code">header:</code>) or Content within the Payload Packet representing the header.
+                The "<em class="em">Payload Object</em>" refers to the Object within the Payload Packet (ie: <code class="code">payload:</code>).
+                The "<em class="em">Payload Content</em>" refers to the Content within the Payload Packet.
               </p>
               <p class="p">
                 The <code class="code">FSS-000E (Payload)</code> is very flexible in what it allows within the Header of the Payload Packet.
-                The <strong>Control</strong> program is more restrictive and supports only a subset of the possibilities (which this is explicitly allowed by the Specification).
+                The <strong class="strong">Control</strong> program is more restrictive and supports only a subset of the possibilities (which this is explicitly allowed by the Specification).
               </p>
               <p class="p">
-                The <strong>Control</strong> program only supports the following Payload Packet header Objects for the response:
+                The <strong class="strong">Control</strong> program only supports the following Payload Packet header Objects for the response:
               </p>
               <ul>
                 <li>
@@ -190,9 +190,9 @@
                 </li>
               </ul>
               <p class="p">
-                When the <strong>Control</strong> program fails to function due to some error, there will be no specially formatted message printed.
-                When the <strong>Controller</strong> program fails before it can perform the requested action, then a <code class="code">response error [action] [status]</code> formatted message is printed.
-                When the <strong>Controller</strong> program successfully performs the action but the result of that action is an error, then a <code class="code">response controller [action] F_failure</code> formatted message is printed.
+                When the <strong class="strong">Control</strong> program fails to function due to some error, there will be no specially formatted message printed.
+                When the <strong class="strong">Controller</strong> program fails before it can perform the requested action, then a <code class="code">response error [action] [status]</code> formatted message is printed.
+                When the <strong class="strong">Controller</strong> program successfully performs the action but the result of that action is an error, then a <code class="code">response controller [action] F_failure</code> formatted message is printed.
               </p>
             </div>
           </section>
