--- a/documentation/firewall.html
+++ b/documentation/firewall.html
@@ -84,10 +84,10 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>firewall</strong> program is a tool for simplifying and automating the <strong>iptables</strong> program.
+              The <strong class="strong">firewall</strong> program is a tool for simplifying and automating the <strong class="strong">iptables</strong> program.
             </p>
             <p class="p">
-              This tool is set to be replaced now that both the <strong>firewall</strong> and the <strong>iptables</strong> programs are outdated. The latest <strong>iptables</strong> program replacement (the <strong>nftables</strong> program) is superior and the <strong>firewall</strong> will need major rewrites to utilize the replacement.
+              This tool is set to be replaced now that both the <strong class="strong">firewall</strong> and the <strong class="strong">iptables</strong> programs are outdated. The latest <strong class="strong">iptables</strong> program replacement (the <strong class="strong">nftables</strong> program) is superior and the <strong class="strong">firewall</strong> will need major rewrites to utilize the replacement.
             </p>
             <p class="p">
               This tools is one of the original two programs of the <abbr title="Featureless Linux Library">FLL</abbr> project and is designed to be a fully functional proof of concept for the <abbr title="Featureless Linux Library">FLL</abbr> project.
@@ -165,7 +165,7 @@
                 </table>
               </div>
               <p class="p">
-                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong class="strong">utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p class="p">
                 The <code class="code">+N/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
