--- a/documentation/fss_extended_write.html
+++ b/documentation/fss_extended_write.html
@@ -83,7 +83,7 @@
 
           <div class="main-content">
             <p class="p">
-              The <strong>fss_extended_write</strong> program is a tool for generating strings that follow the <code class="code">FSS-0001 (Extended)</code> standard.
+              The <strong class="strong">fss_extended_write</strong> program is a tool for generating strings that follow the <code class="code">FSS-0001 (Extended)</code> standard.
             </p>
             <p class="p">
               This tool is designed to be scriptable and accepts piped input using a special format.
@@ -164,7 +164,7 @@
                 </table>
               </div>
               <p class="p">
-                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+Q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong class="strong">utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+Q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+Q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p class="p">
                 The <code class="code">+N/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
