--- a/news.html
+++ b/news.html
@@ -115,7 +115,7 @@
                 This release should be more portable and testable.
               </p>
               <p class="p">
-                The <strong>BASH</strong> alternative <strong>ZSH</strong> is now supported by several scripts.
+                The <strong class="strong">BASH</strong> alternative <strong class="strong">ZSH</strong> is now supported by several scripts.
               </p>
               <p class="p">
                 Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
@@ -136,20 +136,20 @@
                 The Featureless Linux Library stable version 0.6.0 is released.
               </p>
               <p class="p">
-                The <strong>controller</strong> program is a re-interpretation of the <strong>Featureless Make</strong> program written in a more generalized fashion that is focused on performing a set of tasks.
-                This is very similar to a system initialize program such as <em>sysvinit</em>.
+                The <strong class="strong">controller</strong> program is a re-interpretation of the <strong class="strong">Featureless Make</strong> program written in a more generalized fashion that is focused on performing a set of tasks.
+                This is very similar to a system initialize program such as <em class="em">sysvinit</em>.
                 Support for running as a system initialize replacement is partially complete.
-                There is currently no way to send messages to the <strong>controller</strong> program to start and stop anything.
-                The <strong>control</strong> program, which is used to communicate to the <strong>controller</strong> program is also incomplete.
+                There is currently no way to send messages to the <strong class="strong">controller</strong> program to start and stop anything.
+                The <strong class="strong">control</strong> program, which is used to communicate to the <strong class="strong">controller</strong> program is also incomplete.
                 The next <abbr title="Featureless Linux Library">FLL</abbr> development version, the 0.7.0 series, will heavily focused on network protocols.
               </p>
               <p class="p">
-                The <strong>utf8</strong> program is a handy tool to convert from <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters to their Unicode value or vice-versa.
+                The <strong class="strong">utf8</strong> program is a handy tool to convert from <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters to their Unicode value or vice-versa.
                 This can convert entire files.
               </p>
               <p class="p">
-                <strong>Featureless Make</strong> has some major changes.
-                The <strong>fake</strong> program now accepts piped data, which must be a valid <em>fakefile</em>.
+                <strong class="strong">Featureless Make</strong> has some major changes.
+                The <strong class="strong">fake</strong> program now accepts piped data, which must be a valid <em class="em">fakefile</em>.
                 There are new Objects available for the <a href="documentation/fake/specifications/settings.html" class="link">build settings</a> and the <a href="documentation/fake/specifications/fakefile.html" class="link">fakefile</a>.
               </p>
               <p class="p">
@@ -174,12 +174,12 @@
                 This release is a release canditate for the stable version 0.6.0.
               </p>
               <p class="p">
-                Unit tests for all <em>level_0</em> projects now exists (except for f_type which is not planned to ever have unit tests).
+                Unit tests for all <em class="em">level_0</em> projects now exists (except for f_type which is not planned to ever have unit tests).
               </p>
               <p class="p">
                 Many problems and consistency issue have been identified by the written unit tests and fixed.
                 The unit tests, however, are neither complete nor thorough.
-                There are almost no unit tests for <em>level_1</em>, <em>level_2</em>, or <em>level_3</em> projects.
+                There are almost no unit tests for <em class="em">level_1</em>, <em class="em">level_2</em>, or <em class="em">level_3</em> projects.
               </p>
               <p class="p">
                 I noticed that the Unicode processing code is incomplete as of the 0.5.9 release.
@@ -209,10 +209,10 @@
                 When I first discovered I could have a phone that respects my freedom, my privacy, and my liberty, I was ecstatic. I don't have to be weigh down by horrible interfaces, horrible software, and horrible flexibility that other people like or otherwise think is a good idea. I would have the opportunity to tweak and adjust the ideas as I see fit within my own personal tolerances and willingness to put the effort in.
               </p>
               <p class="p">
-                I supported several phones over years, such as the <strong>OpenMoko Freerunner</strong>, an embarrassing failure in the community to the leap forward pioneered by the <strong>Unbuntu Aquaris</strong>. Many of these phones ultimately failed or faded into the night due to a hostile industry, market, and regulations. The <strong>Librem5</strong> from <a href="https://puri.sm/" class="link external">Purism</a> has now stepped up to the plate, learned from the past mistakes, and delivered a phone that, while not complete or ideal, lives up to their standards and has thus far survived numerous, and blatant, hostile industry actions and economic disasters.
+                I supported several phones over years, such as the <strong class="strong">OpenMoko Freerunner</strong>, an embarrassing failure in the community to the leap forward pioneered by the <strong class="strong">Unbuntu Aquaris</strong>. Many of these phones ultimately failed or faded into the night due to a hostile industry, market, and regulations. The <strong class="strong">Librem5</strong> from <a href="https://puri.sm/" class="link external">Purism</a> has now stepped up to the plate, learned from the past mistakes, and delivered a phone that, while not complete or ideal, lives up to their standards and has thus far survived numerous, and blatant, hostile industry actions and economic disasters.
               </p>
               <p class="p">
-                I finally have my <strong>Librem5</strong>. I have had to quite painfully, if not patiently, wait for my phone to actually be shipped years late (due to global economic situations). This is my review after having used the phone with respect to the other open-source phones I have used, namely the <strong>Pinephone</strong> from <a href="https://www.pine64.org/" class="link external">Pine64</a>. I have discovered good things, bad things, horrible things, and great things about this phone.
+                I finally have my <strong class="strong">Librem5</strong>. I have had to quite painfully, if not patiently, wait for my phone to actually be shipped years late (due to global economic situations). This is my review after having used the phone with respect to the other open-source phones I have used, namely the <strong class="strong">Pinephone</strong> from <a href="https://www.pine64.org/" class="link external">Pine64</a>. I have discovered good things, bad things, horrible things, and great things about this phone.
               </p>
               <p class="p">
                 <a id="2022_06_04-librem_to_freedom-more" href="news/2022_06_04-librem_to_freedom.html" class="content link" aria-labelledby="2022_06_04-librem_to_freedom-more 2022_06_04-librem_to_freedom-title">Continue reading…</a>
@@ -248,7 +248,7 @@
                 Update the website, bringing in my initial pass at the documentation for each of the programs provided by the <abbr title="Featureless Linux Library">FLL</abbr> project. Most of this documentation is copied from the help of each program and any improvements or deviations are incidental.
               </p>
               <p class="p">
-                While working on the documentation, I discovered and fixed random problems. In particular, the <strong>iki_read</strong> program in the release candidate has a major regression where it doesn't do anything. This is the result of a very minor mistake in passing the wrong size variable to the file read functions. Essentially, the <strong>iki_read</strong> program is only processing files of length 0 and as a result never produces any output. This is now fixed upstream and I am even happier with the practice of using release candidates.
+                While working on the documentation, I discovered and fixed random problems. In particular, the <strong class="strong">iki_read</strong> program in the release candidate has a major regression where it doesn't do anything. This is the result of a very minor mistake in passing the wrong size variable to the file read functions. Essentially, the <strong class="strong">iki_read</strong> program is only processing files of length 0 and as a result never produces any output. This is now fixed upstream and I am even happier with the practice of using release candidates.
               </p>
               <p class="p">
                 <a id="2022_05_06-basic_program_documentation-more" href="news/2022_05_06-basic_program_documentation.html" class="content link" aria-labelledby="2022_05_06-basic_program_documentation-more 2022_05_06-basic_program_documentation-title">Continue reading…</a>
